--- a/src/styles.css
+++ b/src/styles.css
@@ -57,3 +57,19 @@ button {
 .list {
   font-size: 18px;
 }
+
+.modal {
+  max-width: 600px;
+  max-height: 300px;
+  margin: 100px auto;
+  overflow-y: auto;
+  background: #fff;
+}
+
+.modal > h1 {
+  text-align: center;
+}
+
+.modal .modal-content {
+  padding: 10px;
+}
