--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,7 @@ button {
 }
 
 .modal {
+  position: relative;
   max-width: 600px;
   max-height: 300px;
   margin: 100px auto;
@@ -74,3 +75,37 @@ button {
   padding: 10px;
 }
 
+/* .close-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  fill: black;
+}
+
+.close-icon:hover {
+  fill: blue;
+} */
+
+.modal__close-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  margin: 0;
+  fill: black;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color:#fff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__close-btn:hover,
+.modal__close-btn:focus {
+    fill:blue;
+    background-color:#fff;
+    box-shadow: none;
+  }
