--- a/src/styles.css
+++ b/src/styles.css
@@ -75,18 +75,7 @@ button {
   padding: 10px;
 }
 
-/* .close-icon {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  fill: black;
-}
-
-.close-icon:hover {
-  fill: blue;
-} */
-
-.modal__close-btn {
+.modal-close-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,12 +89,13 @@ button {
   fill: black;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  background-color:#fff;
+  background-color: #fff;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal__close-btn:hover,
-.modal__close-btn:focus {
-    fill:blue;
-    background-color:#fff;
-    box-shadow: none;
-  }
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  cursor: pointer;
+  fill: blue;
+  background-color: #fff;
+  box-shadow: none;
+}
