--- a/src/styles.css
+++ b/src/styles.css
@@ -86,10 +86,10 @@ button {
   height: 30px;
   padding: 0;
   margin: 0;
-  /* fill: black; */
+  fill: black;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  /* background-color: #fff; */
+  background-color: #fff;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn:hover,
